--- a/Home.html
+++ b/Home.html
@@ -1,3 +1,30 @@
-<html>
-    
+<!DOCTYPE html>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">    
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/dcdb35c51f.js"></script>
+        <link rel="stylesheet" type="text/css" href="./neon_font/stylesheet.css">
+        <link rel="stylesheet" type="text/css" href="main.css">
+    </head>
+    <body>
+        <div id="homeDiv">
+            <h2> Tetris</h2>
+            <p id="idPlayer"></p>
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="namePlayer">Pseudo </label>
+                    <input type="text" class="form-control" id="namePlayer">
+                </div>
+            </form>
+            <div>
+                <a class="btn shadow" role="button" id="buttonCreateGame" href="Partie.html"> Créer la partie </a>
+                <a class="btn shadow" role="button" id="buttonJoinGame"> Rejoindre la partie </a>
+            </div>
+        </div>
+    <script type="text/javascript" src="Home.js"></script>
+  </body>
 </html>
