essai peer to peer

--- a/Partie.html
+++ b/Partie.html
@@ -7,6 +7,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="https://kit.fontawesome.com/dcdb35c51f.js"></script>
+        <script src="peerjs.min.js"></script>
         <link rel="stylesheet" type="text/css" href="./neon_font/stylesheet.css">
         <link rel="stylesheet" type="text/css" href="partie.css">
     </head>
