Remplacement id joueur par id partie + suppression affichage id joueur distant :fire:

--- a/Partie.html
+++ b/Partie.html
@@ -13,6 +13,7 @@
     </head>
     <body>
         <h1 id="title">TETRIS</h1>
+        <p id="gameId"></p>
         <div id="game" class="row no-gutters">
 
             <div class="modal" tabindex="-1" role="dialog">
@@ -60,7 +61,6 @@
 
             <div id="homePlayerGame" class="col-lg-5">
                 <div id="infosGameHomePlayer">
-                    <p id="idHomePlayer"></p>
                     <p id="nameHomePlayer"></p>
                 </div>
                 <div id="canvasHomePlayer">
@@ -88,7 +88,6 @@
 
             <div id="remotePlayerGame" class="col-lg-5">
                 <div id="infosGameRemotePlayer">
-                    <p id="idRemotePlayer"></p>
                     <p id="nameRemotePlayer"></p>
                 </div>
                 <div id="canvasRemotePlayer">
