--- a/Partie.html
+++ b/Partie.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">    
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="https://kit.fontawesome.com/dcdb35c51f.js"></script>
-        <script src="peerjs.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="./neon_font/stylesheet.css">
-        <link rel="stylesheet" type="text/css" href="partie.css">
-    </head>
-    <body>
-        <h1 id="title">TETRIS</h1>
-        <p id="gameId"></p>
-        <div id="game" class="row no-gutters">
 
-            <div class="modal" tabindex="-1" role="dialog">
-                <div class="modal-dialog">
-                  <div class="modal-content">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/dcdb35c51f.js"></script>
+    <script src="peerjs.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./neon_font/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="partie.css">
+</head>
+
+<body>
+    <h1 id="title">TETRIS</h1>
+    <p id="gameId"></p>
+    <div id="game" class="row no-gutters">
+
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
                     <div class="modal-header">
-                      <h2 class="modal-title">Comment jouer</h2>
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="fas fa-times"></span>
-                      </button>
+                        <h2 class="modal-title">Comment jouer</h2>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span class="fas fa-times"></span>
+                        </button>
                     </div>
                     <div class="modal-body">
                         <h4>Les déplacements</h4>
                         <p class="firstP">
-                            <span class="fas fa-caret-square-up fa-lg"></span> 
+                            <span class="fas fa-caret-square-up fa-lg"></span>
                             Changer la rotation de la pièce
                         </p>
                         <p>
-                            <span class="fas fa-caret-square-left fa-lg"></span> 
+                            <span class="fas fa-caret-square-left fa-lg"></span>
                             Déplacer la pièce vers la gauche
                         </p>
                         <p>
-                            <span class="fas fa-caret-square-right fa-lg"></span> 
+                            <span class="fas fa-caret-square-right fa-lg"></span>
                             Déplacer la pièce vers la droite
                         </p>
                         <p>
-                            <span class="fas fa-caret-square-down fa-lg"></span> 
+                            <span class="fas fa-caret-square-down fa-lg"></span>
                             Déplacer la pièce vers le bas
                         </p>
                         <p>
@@ -53,51 +55,48 @@
                         <p>La partie s'arrête lorsqu'un des joueur ne peut plus poser de pièces</p>
                     </div>
                     <div class="modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
                     </div>
-                  </div>
                 </div>
-              </div>
+            </div>
+        </div>
 
-            <div id="homePlayerGame" class="col-lg-5">
-                <div id="infosGameHomePlayer">
-                    <p id="nameHomePlayer"></p>
-                </div>
-                <div id="canvasHomePlayer">
-                    <canvas id="canvasHome" style="background: grey;" width="200" height="400">
+        <div id="homePlayerGame" class="col-lg-5">
+            <div id="infosGameHomePlayer">
+                <p id="nameHomePlayer"></p>
+            </div>
+            <div id="canvasHomePlayer">
+                <canvas id="canvasHome" style="background: grey;" width="200" height="400">
+                </canvas>
+            </div>
+        </div>
+
+        <div id="infosGame" class="col-lg-1">
+            <div id="nextPieceDisplayed">
+                <p>Suivant</p>
+                <div>
+                    <canvas id="nextPieceCanvas" style="background: grey;" width="100" height="155">
                     </canvas>
                 </div>
             </div>
-
-            <div id="infosGame" class="col-lg-1">
-                <div id="nextPieceDisplayed">
-                    <p>Suivant</p>
-                    <div>
-                        <canvas id="nextPieceCanvas" style="background: grey;" width="100" height="155">
-                        </canvas>
-                    </div>
-                </div>
-                <div id="score">
-                    <p>Score</p>
-                    <div>
-                        <p id="currentScore"></p>
-                        <p id="currentLineScore"></p>
-                    </div>
-                </div>
-            </div>
-
-            <div id="remotePlayerGame" class="col-lg-5">
-                <div id="infosGameRemotePlayer">
-                    <p id="nameRemotePlayer"></p>
-                </div>
-                <div id="canvasRemotePlayer">
-                        <canvas id="canvasRemote" style="background: grey;" width="200" height="400">
-                        </canvas>
-                </div>   
+            <div id="score">
+                <p>Score</p>
+                <p id="currentScore" style="font-size: xxx-large;"></p>
             </div>
         </div>
+
+        <div id="remotePlayerGame" class="col-lg-5">
+            <div id="infosGameRemotePlayer">
+                <p id="nameRemotePlayer"></p>
+            </div>
+            <div id="canvasRemotePlayer">
+                <canvas id="canvasRemote" style="background: grey;" width="200" height="400">
+                </canvas>
+            </div>
+        </div>
+    </div>
     <script type="text/javascript" src="Partie.js"></script>
-    </body>
+</body>
 
 
 </html>
