ajout commentaire html + home.js

--- a/Partie.html
+++ b/Partie.html
@@ -18,6 +18,8 @@
     <p id="gameId"></p>
     <div id="game" class="row no-gutters">
 
+        <!-- MODAL REGLES DU JEU -->
+
         <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -61,6 +63,8 @@
             </div>
         </div>
 
+        <!-- JEU DU JOUEUR -->
+
         <div id="homePlayerGame" class="col-lg-5">
             <div id="infosGameHomePlayer">
                 <p id="nameHomePlayer"></p>
@@ -70,6 +74,8 @@
                 </canvas>
             </div>
         </div>
+
+        <!-- SCORE ET PROCHAINE PIECE -->
 
         <div id="infosGame" class="col-lg-1">
             <div id="nextPieceDisplayed">
@@ -85,6 +91,8 @@
             </div>
         </div>
 
+        <!-- JEU DE L'ADVERSAIRE -->
+
         <div id="remotePlayerGame" class="col-lg-5">
             <div id="infosGameRemotePlayer">
                 <p id="nameRemotePlayer"></p>
@@ -95,7 +103,9 @@
             </div>
         </div>
     </div>
+
     <script type="text/javascript" src="Partie.js"></script>
+
 </body>
 
 
