--- a/Home.html
+++ b/Home.html
@@ -10,8 +10,13 @@
         <link rel="stylesheet" type="text/css" href="home.css">
     </head>
     <body>
+        <!-- PAGE D'ACCUEIL -->
+
         <div id="homeDiv">
             <h2>Tetris</h2>
+
+            <!-- FORMULAIRE POUR LE PSEUDO -->
+
             <form class="form-inline">
                 <div class="form-group">
                     <label for="namePlayer">Pseudo</label>
@@ -19,9 +24,14 @@
                 </div>
             </form>
             <div>
+                <!-- BUTTON POUR CREER ET REJOINDRE UNE PARTIE -->
+
                 <button class="btn shadow" type="button" id="buttonCreateGame"> Créer une partie </button>
                 <button class="btn shadow" type="button" id="buttonJoinGame" data-toggle="collapse" data-target="#remoteId"> Rejoindre une partie </button>
                 <div class="collapse" id="remoteId">
+
+                    <!-- FORMULAIRE POUR L'ID DE LA PARTIE A REJOINDRE -->
+                    
                     <form class="form-inline" id="formRemoteId">
                         <div class="form-group">
                             <label for="idRemotePlayer">ID Partie</label>
@@ -32,6 +42,8 @@
                 </div>
             </div>
         </div>
+
     <script type="text/javascript" src="Home.js"></script>
+
     </body>
 </html>
